# libspeech

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: cmake.yml  lint.yml  nextjs.yml  release-please.yml  wheels.yml
app/: page.tsx
cmake/: AudioFlux.cmake  Conan.cmake  ONNXRuntime.cmake
components/: FeaturesSection.tsx
conda.recipe/: meta.yaml
docs/logo/: README.md
examples/: main.cpp
examples/denoiser_app/: controler.h  main.cpp
examples/silero/: silero-vad-onnx.cpp
examples/silero_app/: main.cpp
include/: audio.h  base_model.h  onnx_model.h  progressbar.h  silero_vad.h  utils.h
include/dsp/: resample.h
include/models/: facebook_denoiser.h  onnx_model.h  silero_vad.h  speechbrain_denoiser.h
include/utils/: progressbar.h  utils.h
pages/: index.tsx
src/: audio.cpp  base_model.cpp  onnx_model.cpp  progressbar.cpp  resample.cpp  silero_vad.cpp  utils.cpp
src/binding/bind_audio/: main.cpp
src/dsp/: resample.cpp
src/libspeech/: __init__.py  core.py
src/models/: base_model.cpp  facebook_denoiser.cpp  onnx_model.cpp  silero_vad.cpp  speechbrain_denoiser.cpp
src/utils/: progressbar.cpp  utils.cpp
to_onnx/facebook_denoiser/: facebook-denoiser.ipynb
